--- a/package.json
+++ b/package.json
@@ -27,8 +27,16 @@
         "ultron": "1.0.2",
         "ws": "1.0.1"
     },
-    "installerVersion": "1.6",
+    "installerVersion": "2.0",
     "installerUpdateContent": [
+	    {
+            "version": "2.0",
+            "updateContent": [
+                "拆分游戏主程序至app/NoName文件夹,支持复制该文件夹到安卓版本",
+                "主更新程序,添加更新源,并支持多线程更新",
+                "【在线更新】添加更新源,并添加扩展更新源",
+            ]
+        },
         {
             "version": "1.6",
             "updateContent": [
