--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
             "updateContent": [
                 "拆分游戏主程序至app/NoName文件夹,支持复制该文件夹到安卓版本",
                 "主更新程序,添加更新源,并支持多线程更新",
-                "【在线更新】添加更新源,并添加扩展更新源",
+                "【在线更新】添加更新源,并添加扩展更新源"
             ]
         },
         {
